--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,11 +4,17 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Noom
+        title chat-app
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body
         header 
-            h1 Noom
-        main 
-            h3 Welcome to Noom
+            h1 Chat-App
+        main
+            ul
+            form#nick
+                input(type="text",placeholder="choose a nickname",required)
+                button Save
+            form#message
+                input(type="text",placeholder="write a msg",required)
+                button Send
         script(src="/public/js/app.js")
