--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,11 +10,23 @@ html(lang="en")
         header 
             h1 Chat-App
         main
-            ul
-            form#nick
-                input(type="text",placeholder="choose a nickname",required)
-                button Save
-            form#message
-                input(type="text",placeholder="write a msg",required)
-                button Send
+            div#welcome
+                form
+                    input(placeholder="room name",required,type="text")
+                    button Enter Room
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
+
+
+
+
+            
+            //- ------------------------code for websockets-----------------------
+            //- ul
+            //- form#nick
+            //-     input(type="text",placeholder="choose a nickname",required)
+            //-     button Save
+            //- form#message
+            //-     input(type="text",placeholder="write a msg",required)
+            //-     button Send
+        //- script(src="/public/js/app.js")
