--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,9 +11,19 @@ html(lang="en")
             h1 Chat-App
         main
             div#welcome
-                form
+                form#name
+                    input(placeholder="nickname",required,type="text")
+                    button Save
+                form#enter
                     input(placeholder="room name",required,type="text")
                     button Enter Room
+            div#room
+                h3
+                ul
+                form#msg
+                    input(placeholder="message",required,type="text")
+                    button Send
+            
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
 
