--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -17,13 +17,14 @@ html(lang="en")
                 form#enter
                     input(placeholder="room name",required,type="text")
                     button Enter Room
+                h4 Open Rooms: 
+                ul
             div#room
                 h3
                 ul
                 form#msg
                     input(placeholder="message",required,type="text")
                     button Send
-            
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
 
